k3s/image-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-manager
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-manager
  template:
    metadata:
      labels:
        app: image-manager
    spec:
      containers:
      - name: image-manager
        image: registry.dn4g.ru/image-manager:v1
        imagePullPolicy: Always
        securityContext:
          privileged: true # ВАЖНО для loop devices
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 50051
          name: grpc
        volumeMounts:
        - name: data
          mountPath: /app/data
        - name: dev
          mountPath: /dev # DIB нужен доступ к /dev
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: im-db-pvc
      - name: dev
        hostPath:
          path: /dev
---
apiVersion: v1
kind: Service
metadata:
  name: image-manager
  namespace: default
spec:
  selector:
    app: image-manager
  ports:
  - name: http
    port: 80
    targetPort: 8080
  - name: grpc
    port: 50051
    targetPort: 50051
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: image-manager
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: image-manager.dn4g.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: image-manager
            port:
              name: http

---
# INGRESS 2: gRPC
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: image-manager-grpc
   namespace: default
   annotations:
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/backend-protocol: "GRPC" # ВАЖНО!
spec:
  rules:
  - host: grpc.dn4g.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: image-manager
            port:
              name: grpc
